# simple_email_client

./: BUILD_SUMMARY.md  README.md
docs/: BUILD.md  introduction.txt
examples/cpp/: CMakeLists.txt  CMakePresets-Windows.json  CMakePresets.json  CMakeUserPresets.json  LICENSE  build-windows.bat  build.sh  conanfile.txt
examples/cpp/build_old/: CMakePresets.json
examples/cpp/docs/: TECHNICAL.md
examples/cpp/src/: main.cpp
examples/python/: README.md  main.py  pyproject.toml  requirements.txt
examples/python/docs/: SETUP.md  TROUBLESHOOTING.md  USAGE.md
examples/python/src/: Message_Structure.py  SMTP_Control.py
